--- a/templates_change/index.html
+++ b/templates_change/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="index">
-        <h1>MOSAIC THE FACE-face</h1><br>
+        <h1>MOSAIC THE FACE</h1><br>
         {% if user.is_authenticated %}
         <button type="button" class="btn btn-primary" onclick="location.href='{% url 'list' %}'">Board</button>
         <br>
